new proj/src/objects/Account_Frame_Agreement__c.object
<CustomObject>
    <description>This is a junction object between Account and Contract OG Frame Agreement.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Linked Frame Agreement</relationshipLabel>
        <relationshipName>Account_Frame_Agreement</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>Contract Name</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Linked Accounts</relationshipLabel>
        <relationshipName>Account_Frame_Agreement</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to avoid duplicate mappings of Contracts with Accounts</description>
        <externalId>true</externalId>
        <label>Unique Text</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Frame Agreement</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Acc Frame Agreement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Frame Agreement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>